AC_PREREQ(2.59)
AC_INIT(configure.in)

FINAGLE_VERSION=1.0
FINAGLE_RELEASE=esyscmd([svnversion .])
AC_SUBST(FINAGLE_VERSION)
AC_SUBST(FINAGLE_RELEASE)

AC_CONFIG_SRCDIR(configure.in)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(libFinagle, $FINAGLE_VERSION-$FINAGLE_RELEASE)

# Library versioning
LIB_CURRENT=0
LIB_REVISION=0
LIB_AGE=0
AC_SUBST(LIB_CURRENT)
AC_SUBST(LIB_REVISION)
AC_SUBST(LIB_AGE)

# Doxygen
#DX_HTML_FEATURE(ON)
#DX_CHM_FEATURE(OFF)
#DX_CHI_FEATURE(OFF)
#DX_MAN_FEATURE(OFF)
#DX_RTF_FEATURE(OFF)
#DX_XML_FEATURE(OFF)
#DX_PDF_FEATURE(OFF)
#DX_PS_FEATURE(OFF)
#DX_INIT_DOXYGEN(libFinagle, Doxyfile, doc)

# Check for programs
AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL

# Check for libraries
#ACX_PTHREAD
PTHREAD_LIBS=-lpthread
PTHREAD_CFLAGS=
AC_SUBST(PTHREAD_LIBS)
AC_SUBST(PTHREAD_CFLAGS)

AC_CHECK_LIB( z,     deflateInit_,         , exit )
AC_CHECK_LIB( expat, XML_ExpatVersionInfo, , exit )

PKG_CHECK_MODULES( libpcre, [libpcre >= 6.6],    , exit )
PKG_CHECK_MODULES( openssl, [openssl >= 0.9.7],  , exit )
PKG_CHECK_MODULES( uuid,    [ossp-uuid >= 0.21], , exit )

AM_PATH_CPPUNIT(1.11.0)

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h limits.h netdb.h stdlib.h string.h sys/ioctl.h sys/param.h sys/socket.h sys/statvfs.h sys/time.h sys/vfs.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_MODE_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_ERROR_AT_LINE
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_REALLOC
AC_FUNC_SELECT_ARGTYPES
AC_FUNC_STAT
AC_FUNC_STRFTIME
AC_FUNC_STRTOD
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([getcwd gethostbyaddr gethostbyname gettimeofday inet_ntoa memmove memset mkdir rmdir select socket strerror strncasecmp strrchr strtol strtoul])

AC_CONFIG_FILES([Makefile
                 Finagle/Makefile test/Makefile
                 libFinagle.spec libFinagle.pc Doxyfile])
AC_OUTPUT
